--- a/run/config/smoke_camera.yaml
+++ b/run/config/smoke_camera.yaml
@@ -1,11 +1,14 @@
-positive: A realistic person smoking a cigarette, natural mouth movement, smooth inhale
-  and exhale motion, relaxed posture, subtle head movement, clear facial details,
-  warm lighting, cinematic style, straight cigarette.
-negative: misidentified cigarette, object confusion, disappearing cigarette, frozen
-  frame, floating cigarettes, distorted cigarette, distorted fingers, unnatural hand
-  gestures, poor smoke physics, facial distortion, blurred details, missing facial
-  features, jerky movements, unrealistic smoke density, cigarette merging with skin,
-  distorted hands, missing fingers, low quality, bad anatomy, unrealistic pose, duplicate,
-  disfigured, poorly drawn.
-people: /home/lior/datasets/dms/train/Manual_Full/dss_tolly_smoke/camera_2_00001_room_003643.jpg
+positive: A person smoking a cigarette with subtle movement — a slight head tilt,
+  a gentle hand gesture, soft facial expression changes. Do not change the cigarette
+  shape and length.
+negative: Change the cigarette shape and length. The cigarette is too long, misidentified
+  cigarette, object confusion, disappearing cigarette, floating cigarettes, distorted
+  cigarette, distorted fingers, unnatural hand gestures, poor smoke physics, facial
+  distortion, blurred details, missing facial features, jerky movements, unrealistic
+  smoke density, cigarette merging with skin, distorted hands, missing fingers, low
+  quality, bad anatomy, unrealistic pose, duplicate, disfigured, poorly drawn, too
+  many fingers, extra fingers, fused fingers, twisted fingers, hand merging with cigarette,
+  finger growing from cigarette, anatomical error, malformed hand, glitchy joints,
+  unrealistic hand proportions, wrong finger count, merged geometry.
+people: /home/lior/datasets/dms/train/Manual_Full/ROSCO15W_smoke/night-1/3178841836-20790233-2.jpeg
 camera_pose: Pan Right
