--- a/run/config/default.yaml
+++ b/run/config/default.yaml
@@ -1,5 +1,5 @@
 json_file_path: /home/saul/AIGC/json/video_wan2_2_14B_i2v.json
 task: cup
-positive: A realistic video of a person holding a cup with both hands, bringing it toward their mouth as if about to drink, natural hand grip, clear liquid in the cup, straight and perfectly shaped cup, detailed facial expression, realistic lighting, smooth movement, high resolution, cinematic quality, 4k, sharp focus
-negative: blurry, low resolution, pixelated, extra hands, deformed fingers, unnatural face, distorted cup, bent cup, melted cup, misshapen cup, cup with irregular edges, overexposed, underexposed, bad anatomy, unrealistic proportions, motion blur, double faces, cartoon, drawing, illustration, CGI, text, watermark
-people: /home/saul/Lior/cup/iter_2507/A5E2060755D5D7791BFC423A062B8E1E@Fatigue@1745096382@3@98330684DFA31514B9A36CE55FCE79B1.jpg
+positive: A realistic video of a person firmly holding a cup without drinking, energetic and powerful stance, slight forward motion for dynamic impact, natural hand grip, clear liquid in the cup, straight and perfectly shaped cup, subtle camera shake for impact, cinematic action emphasis, detailed facial expression, realistic lighting, high resolution, 4k, sharp focus
+negative: blurry, low resolution, pixelated, multiple people, extra hands, fused hands and face, fused figure and hands, deformed fingers, unnatural face, distorted cup, bent cup, melted cup, misshapen cup, cup with irregular edges, overexposed, underexposed, bad anatomy, unrealistic proportions, unwanted motion blur, double faces, cartoon, drawing, illustration, CGI, text, watermark
+people: /home/saul/Lior/cup/iter_2508/iter_250814_object_train_mismatch/43E9DDED7E3FCC6E5096B5763CFD3A99@1693701339@2@6FCBF9AFEC729D769DD7CFCDC924AE65.jpg
